Corrected extra spacing in results, temporary solution

--- a/website/static/resultsstyles.css
+++ b/website/static/resultsstyles.css
@@ -1,5 +1,5 @@
 *{
-    
+    text-align:center;
 }
 h1 { font-family: Molengo; font-size: 40px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 26.4px; } 
 h2 { font-family: Molengo; font-size: 40px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; } 
@@ -58,6 +58,11 @@ img{
     float:left;
 }
 /*Navigation bar end*/
+
+.section1 {
+    color: black;
+    margin-top: 50px;
+}
 
 .icon img{
     height: 100px;
